--- a/pages/services/Medicos.html
+++ b/pages/services/Medicos.html
@@ -15,6 +15,12 @@
     <link rel="icon" type="image/x-icon" href="../../assets/LogoServifacil.ico" />
     <link href="../../css/styles.css" rel="stylesheet" />
 
+
+    <!-- jQuery (necesario para usar $('#formModal').modal("show")) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+
     <style>
         .seccion-electricistas {
             margin: 25px;
@@ -58,14 +64,41 @@
                 margin-left: 0;
             }
         }
+
+
+        /* Aumentar el ancho del modal */
+        .modal-dialog {
+            max-width: 700px;
+
+
+            /* Tamaño personalizado más grande que el por defecto */
+        }
+
+        /* Agrandar inputs (excepto el textarea de descripción del problema) */
+        .modal-body input.form-control {
+            font-size: 1rem;
+            padding: 12px;
+        }
+
+        /* Reducir tamaño del textarea de descripción */
+        #txtDescripcion[name="descripcion"] {
+            font-size: 0.9rem;
+            padding: 8px;
+            height: 80px !important;
+        }
+
+        #txtProblema {
+            font-size: 0.9rem;
+            padding: 8px;
+            height: 80px !important;
+        }
     </style>
 </head>
 
 <body>
 
     <!-- BARRA DE NAVEGACION -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
-        style="font-family: 'Poppins', sans-serif;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm" style="font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="../../assets/img/LogoServifacil.png" alt="Servifacil Logo"
@@ -109,13 +142,13 @@
                 <!--COMENTARIO 1-->
                 <div class="d-flex mb-4">
                     <div class="flex-shrink-0">
-                        <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
+                        <img class="rounded-circle" src="../../assets/img/Gabriel Jiron.png" alt="..." />
                     </div>
                     <div class="ms-3">
                         <div class="d-flex align-items-center justify-content-between">
 
                             <div class="nombre-estrellas">
-                                <div class="fw-bold"> Nombre </div>
+                                <div class="fw-bold">Dr. Gabriel Jirón</div>
                                 <div class="estrellas">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -125,19 +158,34 @@
                                 </div>
                             </div>
 
-                            <a href="../pages/services/Electricidad.html"
+                            <a onclick="abrirModal()"
                                 class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
                                 Contratar
                             </a>
                         </div>
-                        If you're going to lead a space frontier, it has to be government...
+                        Medico General |
+                        Especialista Cirugía General
+                        | Laparoscópica
+                        | Endoscopia Digestiva
+                        | Consultas
+
 
                         <div class="d-flex mt-4">
                             <div class="ms-3">
                                 <div class="d-flex align-items-center justify-content-between">
-                                    <div class="fw-bold">Descripcion</div>
+                                    <div class="fw-bold">Servicios Medicos De</div>
                                 </div>
-                                And under those conditions, you cannot establish a capital-market...
+                                <ul>
+                                    <li>Control de pacientes crónicos.</li>
+                                    <li>Atención niños y adultos.</li>
+                                    <li>Curaciones básicas y Avanzadas.</li>
+                                    <li>Biopsias.</li>
+                                    <li>Cauterizaciones lunares, verrugas avesícula, hernias.</li>
+                                    <li>Tiroides, Apendicitis.</li>
+                                    <li>Enfermedades como gastritis.</li>
+                                    <li>Esofagitis.</li>
+                                    <li>Enfermedades del Colon y recto.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -147,33 +195,38 @@
                 <!--COMENTARIO 2-->
                 <div class="d-flex mb-4 mt-5">
                     <div class="flex-shrink-0">
-                        <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
+                        <img class="rounded-circle" src="../../assets/img/Jaher Alfredo Hernandez.jpg" alt="..." />
                     </div>
                     <div class="ms-3">
                         <div class="d-flex align-items-center justify-content-between">
 
                             <div class="nombre-estrellas">
-                                <div class="fw-bold">Nombre</div>
+                                <div class="fw-bold">Jaher Alfredo Hernández González </div>
                                 <div class="estrellas">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star-half-alt"></i>
                                 </div>
+
+                                <a onclick="abrirModal()" class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
+                                    Contratar
+                                </a>
                             </div>
 
-                            <a href="../pages/services/Electricidad.html"
-                                class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
-                                Contratar
-                            </a>
+                            
                         </div>
-                        If you're going to lead a space frontier, it has to be government...
+                        Médico general
+
                         <div class="d-flex mt-4">
                             <div class="ms-3">
                                 <div class="d-flex align-items-center justify-content-between">
-                                    <div class="fw-bold">Descripcion</div>
+                                    <div class="fw-bold">Servicios Medicos De</div>
                                 </div>
-                                And under those conditions, you cannot establish a capital-market...
+                               <ul>
+                                <li>Consultas privadas</li>
+                                <li>Medicina General</li>
+                               </ul>
                             </div>
                         </div>
                     </div>
@@ -198,7 +251,7 @@
                                 </div>
                             </div>
 
-                            <a href="../pages/services/Electricidad.html"
+                            <a onclick="abrirModal()"
                                 class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
                                 Contratar
                             </a>
@@ -218,6 +271,105 @@
             </div>
         </div>
     </section>
+
+    <!--FORMULARIO MODAL-->
+    <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+        data-bs-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!--PARTE DE ARRIBA DEL FORMULARIO-->
+                <div class="modal-header bg-light text-black">
+                    <h5 class="modal-title" id="exampleModalLabel">INGRESE SUS DATOS PARA CONTRATAR</h5>
+                    <button type="button" class="btn-close" style="background-color: white; border: none; color: black;"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+
+                <div class="modal-body g-1">
+                    <input id="txtId" type="hidden" value="0" />
+                    <!--CAMPOS DEL FORULARIO-->
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Nombres</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Correo</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Telefono</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Direccion</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtFecha" class="form-label">Fecha Del Servicio</label>
+                            <input type="text" class="form-control" id="txtFecha" autocomplete="off">
+                        </div>
+
+                        <!-- HORA -->
+                        <div class="col-sm-6 position-relative">
+                            <label class="form-label">Hora</label>
+                            <input type="text" class="form-control" id="inputHora" autocomplete="off" readonly
+                                onfocus="mostrarSelectorHora()" onclick="mostrarSelectorHora()">
+
+                            <!-- Contenedor del selector de hora -->
+                            <div id="selectorHora" class="border rounded p-2 bg-light position-absolute"
+                                style="display:none; z-index: 999; width: 100%; top: 60px;">
+                                <div>
+                                    <label>Hora: <span id="hora-val">12</span></label>
+                                    <input type="range" min="0" max="23" value="12" id="rangeHora" class="form-range">
+                                </div>
+                                <div>
+                                    <label>Minuto: <span id="minuto-val">30</span></label>
+                                    <input type="range" min="0" max="59" value="30" id="rangeMinuto" class="form-range">
+                                </div>
+                                <div class="text-end mt-2">
+                                    <button type="button" class="btn btn-sm btn-success"
+                                        onclick="guardarHora()">Aceptar</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Descripcion Del Problema De Salud</label>
+                            <textarea type="text" class="form-control" id="txtProblema" style="height:125px;resize:none"
+                                name="descripcion"></textarea>
+                        </div>
+
+
+
+                    </div>
+
+                    <!--ALERT-->
+                    <div class="row mt-2">
+                        <div class="col-12">
+                            <div id="mensajeError" class="alert alert-danger" role="alert">
+                                A simple danger alert—check it out!
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <!--BOTONES DE ABAJO-->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-success" onclick="Guardar()">Finalizar</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <footer class="text-center text-lg-start text-white mt-2 bg-dark">
@@ -265,6 +417,7 @@
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../js/scripts.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
 
 </body>
 
