--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 <body>
     <!-- BARRA DE NAVEGACION-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
-        style="font-family: 'Poppins', sans-serif;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm" style="font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
