--- a/pages/services/Electricidad.html
+++ b/pages/services/Electricidad.html
@@ -15,6 +15,11 @@
     <link rel="icon" type="image/x-icon" href="../../assets/LogoServifacil.ico" />
     <link href="../../css/styles.css" rel="stylesheet" />
 
+    <!-- jQuery (necesario para usar $('#formModal').modal("show")) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+
     <style>
         .seccion-electricistas {
             margin: 25px;
@@ -58,17 +63,45 @@
                 margin-left: 0;
             }
         }
+
+
+        /* Aumentar el ancho del modal */
+        .modal-dialog {
+            max-width: 700px;
+
+
+            /* Tamaño personalizado más grande que el por defecto */
+        }
+
+        /* Agrandar inputs (excepto el textarea de descripción del problema) */
+        .modal-body input.form-control {
+            font-size: 1rem;
+            padding: 12px;
+        }
+
+        /* Reducir tamaño del textarea de descripción */
+        #txtDescripcion[name="descripcion"] {
+            font-size: 0.9rem;
+            padding: 8px;
+            height: 80px !important;
+        }
+
+        #txtProblema {
+            font-size: 0.9rem;
+            padding: 8px;
+            height: 80px !important;
+        }
     </style>
 </head>
 
 <body>
 
     <!-- BARRA DE NAVEGACION -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
-        style="font-family: 'Poppins', sans-serif;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm" style="font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../../assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
+                <img src="../../assets/img/LogoServifacil.png" alt="Servifacil Logo"
+                    style="height: 70px; width: 110px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -108,13 +141,13 @@
                 <!--COMENTARIO 1-->
                 <div class="d-flex mb-4">
                     <div class="flex-shrink-0">
-                        <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
+                        <img class="rounded-circle" src="../../assets/img/Emilio Jaen.jpg" alt="..." />
                     </div>
                     <div class="ms-3">
                         <div class="d-flex align-items-center justify-content-between">
 
                             <div class="nombre-estrellas">
-                                <div class="fw-bold"> Nombre </div>
+                                <div class="fw-bold">Emilio Jaén</div>
                                 <div class="estrellas">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -124,19 +157,23 @@
                                 </div>
                             </div>
 
-                            <a href="../pages/services/Electricidad.html"
-                                class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
+                            <a class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none"
+                                onclick="abrirModal()">
                                 Contratar
                             </a>
                         </div>
-                        If you're going to lead a space frontier, it has to be government...
+                        Técnico electricista | Diriá, Granada-Nicaragua
 
                         <div class="d-flex mt-4">
                             <div class="ms-3">
                                 <div class="d-flex align-items-center justify-content-between">
-                                    <div class="fw-bold">Descripcion</div>
+                                    <div class="fw-bold">Brindamos Servicios De</div>
                                 </div>
-                                And under those conditions, you cannot establish a capital-market...
+                                <ul>
+                                    <li>Instalación, mantenimiento y reparación de sistemas eléctricos.</li>
+                                    <li>Cableado general, iluminación, tableros eléctricos y toma corrientes.</li>
+                                    <li>Instalación de breakers, ventiladores, lámparas, sensores y más.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -161,8 +198,8 @@
                                 </div>
                             </div>
 
-                            <a href="../pages/services/Electricidad.html"
-                                class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
+                            <a class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none"
+                                onclick="abrirModal()">
                                 Contratar
                             </a>
                         </div>
@@ -197,8 +234,8 @@
                                 </div>
                             </div>
 
-                            <a href="../pages/services/Electricidad.html"
-                                class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
+                            <a class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none"
+                                onclick="abrirModal()">
                                 Contratar
                             </a>
                         </div>
@@ -217,6 +254,105 @@
             </div>
         </div>
     </section>
+
+    <!--FORMULARIO MODAL-->
+    <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+        data-bs-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!--PARTE DE ARRIBA DEL FORMULARIO-->
+                <div class="modal-header bg-light text-black">
+                    <h5 class="modal-title" id="exampleModalLabel">INGRESE SUS DATOS PARA CONTRATAR</h5>
+                    <button type="button" class="btn-close" style="background-color: white; border: none; color: black;"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+
+                <div class="modal-body g-1">
+                    <input id="txtId" type="hidden" value="0" />
+                    <!--CAMPOS DEL FORULARIO-->
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Nombres</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Correo</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Telefono</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtDescripcion" class="form-label">Direccion</label>
+                            <input type="text" class="form-control" id="txtDescripcion" autocomplete="off">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <label for="txtFecha" class="form-label">Fecha Del Servicio</label>
+                            <input type="text" class="form-control" id="txtFecha" autocomplete="off">
+                        </div>
+
+                        <!-- HORA -->
+                        <div class="col-sm-6 position-relative">
+                            <label class="form-label">Hora</label>
+                            <input type="text" class="form-control" id="inputHora" autocomplete="off" readonly
+                                onfocus="mostrarSelectorHora()" onclick="mostrarSelectorHora()">
+
+                            <!-- Contenedor del selector de hora -->
+                            <div id="selectorHora" class="border rounded p-2 bg-light position-absolute"
+                                style="display:none; z-index: 999; width: 100%; top: 60px;">
+                                <div>
+                                    <label>Hora: <span id="hora-val">12</span></label>
+                                    <input type="range" min="0" max="23" value="12" id="rangeHora" class="form-range">
+                                </div>
+                                <div>
+                                    <label>Minuto: <span id="minuto-val">30</span></label>
+                                    <input type="range" min="0" max="59" value="30" id="rangeMinuto" class="form-range">
+                                </div>
+                                <div class="text-end mt-2">
+                                    <button type="button" class="btn btn-sm btn-success"
+                                        onclick="guardarHora()">Aceptar</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Descripcion Del Problema o Servicio Electrico</label>
+                            <textarea type="text" class="form-control" id="txtProblema" style="height:125px;resize:none"
+                                name="descripcion"></textarea>
+                        </div>
+
+
+
+                    </div>
+
+                    <!--ALERT-->
+                    <div class="row mt-2">
+                        <div class="col-12">
+                            <div id="mensajeError" class="alert alert-danger" role="alert">
+                                A simple danger alert—check it out!
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <!--BOTONES DE ABAJO-->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-success" onclick="Guardar()">Finalizar</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <footer class="text-center text-lg-start text-white mt-2 bg-dark">
@@ -261,9 +397,12 @@
         </div>
     </footer>
 
+
+
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../js/scripts.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
 
 </body>
 
