--- a/pages/services/Medicos.html
+++ b/pages/services/Medicos.html
@@ -209,12 +209,13 @@
                                     <i class="fas fa-star-half-alt"></i>
                                 </div>
 
-                                <a onclick="abrirModal()" class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
+                                <a onclick="abrirModal()"
+                                    class="badge bg-success bg-gradient rounded-pill badge-link text-decoration-none">
                                     Contratar
                                 </a>
                             </div>
 
-                            
+
                         </div>
                         Médico general
 
@@ -223,10 +224,10 @@
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="fw-bold">Servicios Medicos De</div>
                                 </div>
-                               <ul>
-                                <li>Consultas privadas</li>
-                                <li>Medicina General</li>
-                               </ul>
+                                <ul>
+                                    <li>Consultas privadas</li>
+                                    <li>Medicina General</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -324,12 +325,12 @@
                             <div id="selectorHora" class="border rounded p-2 bg-light position-absolute"
                                 style="display:none; z-index: 999; width: 100%; top: 60px;">
                                 <div>
-                                    <label>Hora: <span id="hora-val">12</span></label>
-                                    <input type="range" min="0" max="23" value="12" id="rangeHora" class="form-range">
+                                    <label>Hora: <span id="hora-val">0</span></label>
+                                    <input type="range" min="0" max="23" value="0" id="rangeHora" class="form-range">
                                 </div>
                                 <div>
-                                    <label>Minuto: <span id="minuto-val">30</span></label>
-                                    <input type="range" min="0" max="59" value="30" id="rangeMinuto" class="form-range">
+                                    <label>Minuto: <span id="minuto-val">0</span></label>
+                                    <input type="range" min="0" max="59" value="0" id="rangeMinuto" class="form-range">
                                 </div>
                                 <div class="text-end mt-2">
                                     <button type="button" class="btn btn-sm btn-success"
