--- a/pages/Servicios.html
+++ b/pages/Servicios.html
@@ -106,8 +106,8 @@
                             <div class="mb-2 d-flex gap-2">
                                 <a href="../pages/services/Electricidad.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
-                                <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                <a href="../pages/videos/Electricidad.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3">Electricidad</h5>
@@ -143,7 +143,7 @@
                                 <a href="../pages/services/Fontaneria.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3"> Fontaneria </h5>
@@ -179,7 +179,7 @@
                                 <a href="../pages/services/Albañileria.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3"> Albañileria
@@ -214,7 +214,7 @@
                                 <a href="../pages/services/Carpinteria.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3"> Carpinteria
@@ -252,7 +252,7 @@
                                 <a href="../pages/services/Reparacion_MantHogar.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3"> Reparacion y Mantenimiento en el Hogar
@@ -288,7 +288,7 @@
                                 <a href="../pages/services/Soldadrura.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3">Soldadura
@@ -324,7 +324,7 @@
                                 <a href="../pages/services/Jardineria.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3">Jardineria
@@ -359,8 +359,8 @@
                             <div class="mb-2 d-flex gap-2">
                                 <a href="../pages/services/Medicos.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
-                                <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                <a href="../pages/videos/Medicina.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3">Medicos
@@ -397,7 +397,7 @@
                                 <a href="../pages/services/Abogados.html" class="badge bg-success bg-gradient rounded-pill badge-link"
                                     style="cursor: pointer;">Ver Perfiles</a>
                                 <a href="video.html" class="badge bg-dark bg-gradient rounded-pill badge-link"
-                                    style="cursor: pointer;">Ver video</a>
+                                    style="cursor: pointer;">Ver videos</a>
                             </div>
 
                             <h5 class="card-title mb-3 mt-3">Abogados
