--- a/pages/services/Electricidad.html
+++ b/pages/services/Electricidad.html
@@ -129,12 +129,13 @@
                 <!-- BOTÓN VOLVER -->
                 <div class="text-start btn-volver d-flex align-items-center gap-3">
                     <a href="../../pages/Servicios.html" class="btn btn-dark">
-                        <i class="fa-solid fa-arrow-left me-2"></i>Volver
+                        <i class="fa-solid fa-arrow-left me-2"></i>Volver a Servicios
+                    </a>
+                    <a href="../../pages/videos/Electricidad.html" class="btn btn-success">
+                        <i class="fa-solid fa-magnifying-glass me-2"></i>Ver Videos Del Servicio
                     </a>
                 </div>
             </div>
-
-
 
             <div class="card-body mt-3">
 
