--- a/pages/services/Medicos.html
+++ b/pages/services/Medicos.html
@@ -130,7 +130,10 @@
                 <!-- BOTÓN VOLVER -->
                 <div class="text-start btn-volver d-flex align-items-center gap-3">
                     <a href="../../pages/Servicios.html" class="btn btn-dark">
-                        <i class="fa-solid fa-arrow-left me-2"></i>Volver
+                        <i class="fa-solid fa-arrow-left me-2"></i>Volver a Servicios
+                    </a>
+                    <a href="../../pages/videos/Medicina.html" class="btn btn-success">
+                        <i class="fa-solid fa-magnifying-glass me-2"></i>Ver Videos
                     </a>
                 </div>
             </div>
