--- a/pages/videos/Medicina.html
+++ b/pages/videos/Medicina.html
@@ -76,18 +76,29 @@
 
     <section class="py-5">
         <div class="container px-5 my-5">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0"
-                        src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-                <div class="col-lg-6">
-                    <h2 class="fw-bolder">Growth &amp; beyond</h2>
-                    <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Iusto
-                        est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et
-                        fugit
-                        cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+                <video class="img-fluid rounded mb-5 mb-lg-0" controls playsinline>
+                    <source src="../../assets/videos/VideoMedicina.mp4" type="video/mp4">
+                    Tu navegador no soporta la reproducción de video.
+                </video>
+            </div>
+            <div class="col-lg-6">
+                <h2 class="fw-bolder">SERVICIO DE ATENCION MEDICA</h2>
+                <p class="lead fw-normal text-muted mb-0">Servicios Medicos adomicilio a cargo del Meidco General Jaime Roberto Sanchez Torrez</p>
+                <div class="row gx-5 justify-content-center mt-3">
+                    <!-- BOTÓN VOLVER -->
+                    <div class="text-start btn-volver d-flex align-items-center gap-3">
+                        <a href="../../pages/Servicios.html" class="btn btn-dark">
+                            <i class="fa-solid fa-arrow-left me-2"></i>Volver a Servicios
+                        </a>
+                        <a href="../../pages/services/Medicos.html" class="btn btn-success">
+                            <i class="fa-solid fa-magnifying-glass me-2"></i>Ver Perfiles
+                        </a>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
