Agregando Mas Videos mas cortos final

--- a/pages/videos/Medicina.html
+++ b/pages/videos/Medicina.html
@@ -79,13 +79,13 @@
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
                 <video class="img-fluid rounded mb-5 mb-lg-0" controls playsinline>
-                    <source src="../../assets/videos/videomedicina.mp4" type="video/mp4">
+                    <source src="../../assets/videos/VideosMedicnaGabrielJiron.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de video.
                 </video>
             </div>
             <div class="col-lg-6">
                 <h2 class="fw-bolder">SERVICIO DE ATENCION MEDICA</h2>
-                <p class="lead fw-normal text-muted mb-0">Servicios Medicos adomicilio a cargo del Meidco General Jaime Roberto Sanchez Torrez</p>
+                <p class="lead fw-normal text-muted mb-0">Servicios Medicos adomicilio a cargo del Meidco General Jaime Roberto Sanchez Torres</p>
                 <div class="row gx-5 justify-content-center mt-3">
                     <!-- BOTÓN VOLVER -->
                     <div class="text-start btn-volver d-flex align-items-center gap-3">
