--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -7,79 +7,301 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>ServiFacil.com</title>
+    <!-- ICONOS DE BOSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        crossorigin="anonymous" />
     <link rel="icon" type="image/x-icon" href="../assets/LogoServifacil.ico" />
     <link href="../css/styles.css" rel="stylesheet" />
+
+    <style>
+        header.bg-black {
+            position: relative;
+            min-height: 300px;
+            opacity: 0;
+            transition: opacity 1s ease-out;
+            /* Transición de opacidad */
+        }
+
+        header.bg-black.visible {
+            opacity: 1;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+        }
+    </style>
+
+
+
 </head>
 
 <body>
 
     <!-- BARRA DE NAVEGACION-->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#!">
-                <img src="../assets/img/LogoServifacil.png" alt="Logo del negocio" style="height: 70px; width: 100px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm" style="font-family: 'Poppins', sans-serif;">
+        <div class="container-fluid">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#">
+                <img src="../assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+            <!-- Botón responsive -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link fs-4 active" aria-current="page"
-                            href="../index.html">INICIO</a>
+            <!-- Menú -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto d-flex align-items-center justify-content-end w-100 gap-3">
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="../index.html">
+                            <i class="fa-solid fa-house-chimney me-2"></i> Inicio
+                        </a>
                     </li>
-                    <li class="nav-item"><a class="nav-link fs-4 active" href="../pages/Nosotros.html">NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link fs-4 active" href="../pages/Servicios.html">SERVICIOS</a>
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="../pages/Nosotros.html">
+                            <i class="fa-solid fa-users-line me-2"></i> Nosotros
+                        </a>
                     </li>
-                    <li class="nav-item"><a class="nav-link fs-4 active" href="../pages/Contactos.html">CONTACTOS</a>
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="../pages/Servicios.html">
+                            <i class="fa-solid fa-clipboard-list me-2"></i> Servicios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="../pages/Contactos.html">
+                            <i class="fa-solid fa-envelope-open-text me-2"></i>Contactos
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="#">
+
+                        </a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
+
     <!--FIN BARRA DE NAVEGACION-->
 
 
+    <!--HEADER CABEZERA CON ANUNCIO-->
+    <header class="py-5 bg-black position-relative"
+        style="background-image: url('../assets/img/smartphone-mobile-computer.jpg'); background-size: cover; background-position: center; background-attachment: fixed;height: 300px;">
+        <div class="overlay"></div>
+        <div class="container px-5 position-relative z-index-1">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-xxl-6">
+                    <div class="text-center my-5">
+                        <h1 class="fw-bolder mb-3" style="color:white; text-align: center;">¡Contactos!</h1>
+                        <p class="lead fw-normal mb-4" style="color: #d3d3d3;">Sera un placer recibir tu mensaje.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <!--FIN CARROUSEL-->
+    <!-- Page content -->
+    <section class="py-5">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <!-- Contact form -->
+                <div class="col-lg-6">
+                    <div class="bg-light rounded-3 py-5 px-4 px-md-5">
+                        <div class="text-center mb-5">
+
+                            <h1 class="fw-bolder">Contáctanos</h1>
+                            <p class="lead fw-normal text-muted mb-0">Envíanos un correo para contactarnos</p>
+                        </div>
+
+                        <form id="contactForm">
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="name" type="text" placeholder="Nombre Completo..."
+                                    required />
+                                <label for="name">Nombre Completo...</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="email" type="email" placeholder="name@example.com"
+                                    required />
+                                <label for="email">Correo...</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890"
+                                    required />
+                                <label for="phone">Número de Teléfono...</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <textarea class="form-control" id="message" placeholder="Mensaje" style="height: 10rem"
+                                    required></textarea>
+                                <label for="message">Mensaje</label>
+                            </div>
+                            <div class="d-grid">
+                                <button class="btn btn-lg"
+                                    style="cursor: pointer; background-color: #000; color: white; border: none;"
+                                    id="submitButton" type="submit">Enviar</button>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <!-- Contact cards -->
+                <div class="col-lg-6">
+                    <div class="row gx-5 row-cols-1 gy-4">
+
+                        <!-- Ícono de Correo -->
+                        <div class="col d-flex align-items-center">
+                            <i class="fas fa-envelope text-white bg-black p-2 rounded-circle me-3"
+                                style="font-size: 1.2rem;"></i>
+                            <div>
+                                <div class="h5">Correo</div>
+                                <p class="text-muted mb-0">contacto@ejemplo.com</p>
+                            </div>
+                        </div>
+
+                        <!-- Ícono de WhatsApp -->
+                        <div class="col d-flex align-items-center">
+                            <i class="fas fa-phone text-white bg-black p-2 rounded-circle me-3"
+                                style="font-size: 1.2rem;"></i>
+                            <div>
+                                <div class="h5">WhatsApp</div>
+                                <p class="text-muted mb-0">
+                                    <a href="https://wa.me/+50578216684" target="_blank" class="text-decoration-none"
+                                        style="color:black">Envíanos un mensaje</a>
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- Ícono de Dirección -->
+                        <div class="col d-flex align-items-center">
+                            <i class="fas fa-map-marker-alt text-white bg-black p-2 rounded-circle me-3"
+                                style="font-size: 1.2rem;"></i>
+                            <div>
+                                <div class="h5">Dirección</div>
+                                <p class="text-muted mb-0">Calle Ejemplo #123, Ciudad, País</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
 
+    <!--FOOTER-->
+    <footer class="text-center text-lg-start text-white mt-2 bg-dark">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Links -->
+            <section class="">
+                <!--Grid row-->
+                <div class="row">
+                    <!-- Grid column -->
 
+                    <!-- LOGO y SLOGAN -->
+                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-center">
+                        <img src="../assets/img/LogoServifacil.png" alt="Logo ServiFacil"
+                            style="width: 100px; height: auto;">
+                        <p class="mt-3">¡Tu solución rápida y confiable para el hogar!</p>
+                    </div>
 
+                    <!-- Grid column -->
 
+                    <hr class="w-100 clearfix d-md-none" />
 
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">SERVICIOS</h6>
+                        <p class="text-white">
+                            Albañileria
+                        </p>
+                        <p class="text-white">
+                            Fontaneria
+                        </p>
+                        <p class="text-white">
+                            Electricidad
+                        </p>
+                        <p class="text-white">
+                            Reparacion y Mantenimiento en el Hogar
+                        </p>
 
+                        <p class="text-white">
+                            Muchos Mas...
+                        </p>
+                    </div>
+                    <!-- Grid column -->
 
+                    <hr class="w-100 clearfix d-md-none" />
 
+                    <!-- Grid column -->
+                    <hr class="w-100 clearfix d-md-none" />
 
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">CONTACTOS</h6>
+                        <p><i class="fas fa-home mr-3"></i> Universidad De Managua UdeM</p>
+                        <p><i class="fas fa-envelope mr-3"></i> ServiFacil@gmail.com</p>
+                        <p><i class="fas fa-phone mr-3"></i> 2256-7856</p>
+                        <p><i class="fas fa-print mr-3"></i> 2230</p>
+                    </div>
+                    <!-- Grid column -->
 
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Buscanos En:</h6>
 
+                        <!-- Facebook -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!"
+                            role="button"><i class="fab fa-facebook-f"></i></a>
+                        <!-- Instagram -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!"
+                            role="button"><i class="fab fa-instagram"></i></a>
 
+                        <!-- Linkedin -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#!"
+                            role="button"><i class="fab fa-linkedin-in"></i></a>
 
+                    </div>
+                </div>
+                <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+        </div>
+        <!-- Grid container -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2025 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">ServiFacil.com</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+   
+
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('header.bg-black')?.classList.add('visible');
+        });
+    </script>
+
 
 </body>
 
